--- a/FarmProduct.Web/Views/Shared/_Layout.cshtml
+++ b/FarmProduct.Web/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                     </li>
                     <li><a href="#" class="nav-top-item">用户管理 </a>
                         <ul>
-                            <li><a href="#">Calendar Overview</a></li>
+                            <li><a href="@Url.Action("index", "User")">用户管理</a></li>
                             <li><a href="#">Add a new Event</a></li>
                             <li><a href="#">Calendar Settings</a></li>
                         </ul>
