did fro user function

--- a/FarmProduct.Web/Content/css/style.css
+++ b/FarmProduct.Web/Content/css/style.css
@@ -1103,3 +1103,26 @@ div.wysiwyg iframe
     clear: left;
     width: 97.5% !important;
 }
+
+/********************Validate************************************/
+.field-validation-error {
+    color: #ff0000;
+}
+
+.field-validation-valid {
+    display: none;
+}
+
+.input-validation-error {
+    border: 1px solid #ff0000;
+    background-color: #ffeeee;
+}
+
+.validation-summary-errors {
+    font-weight: bold;
+    color: #ff0000;
+}
+
+.validation-summary-valid {
+    display: none;
+}
