--- a/FarmProduct.Web/Views/Shared/_Layout.cshtml
+++ b/FarmProduct.Web/Views/Shared/_Layout.cshtml
@@ -26,8 +26,7 @@
                     Hello, <a href="#" title="Edit your profile">管理员</a>, you have <a href="#messages"
                         rel="modal" title="3 Messages">3 Messages</a><br />
                     <br />
-                    <a href="#" title="View the Site">View the Site</a> | <a href="#" title="Sign Out">Sign
-                        Out</a>
+                    <a href="#" title="View the Site">View the Site</a> | <a href="@Url.Action("LogOff", "Account")" title="Sign Out">注销</a>
                 </div>
                 <ul id="main-nav">
                     <!-- Accordion Menu -->
